(AsmSearch) Disabled animations for 'basic' style + added z-index so that the 'bar' style can work correctly

--- a/src/@assembly/components/search/search.component.scss
+++ b/src/@assembly/components/search/search.component.scss
@@ -3,6 +3,7 @@
 asm-search {
     display: flex;
     background: inherit;
+    z-index: 99;
 
     // Basic appearance
     &.asm-search-appearance-basic {
